--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,32 @@
         android:theme="@style/Theme.BookStoreG3"
         tools:targetApi="31">
 
-<!--        <activity-->
-<!--            android:name=""-->
-<!--            android:exported="false" />-->
         <activity
             android:name=".activity.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.DangKiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ChiTietActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.GioHangActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.SearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ThanhToanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.TieuThuyetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.TruyenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.DangNhapActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
