--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,54 @@
-*.iml
-.gradle
+/captures
+.externalNativeBuild
+.cxx
+
+# Built application files
+/*/build/
+/build
+
+# Crashlytics configuations
+com_crashlytics_export_strings.xml
+
+# Local configuration file (sdk path, etc)
+local.properties
 /local.properties
-/.idea/caches
-/.idea/libraries
+
+# Gradle generated files
+.gradle/
+.gradle
+
+# Signing files
+.signing/
+
+# User-specific configurations
+/.idea/libraries/
+/.idea/caches/
+/.idea/workspace.xml
+/.idea/tasks.xml
+/.idea/.name
+/.idea/compiler.xml
+/.idea/copyright/profiles_settings.xml
+/.idea/encodings.xml
+/.idea/misc.xml
+.idea/misc.xml
 /.idea/modules.xml
+/.idea/scopes/scope_settings.xml
+/.idea/vcs.xml
+/.idea/assetWizardSettings.xml
+/.idea/deploymentTargetDropDown.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
-local.properties
+*.iml
+
+# OS-specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+
