--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
-        tools:replace="android:supportsRtl"
         android:theme="@style/Theme.BookStoreG3"
-        tools:targetApi="31">
+        tools:replace="android:supportsRtl"
+        tools:targetApi="31" >
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
@@ -33,7 +33,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_key" />
-
 
         <activity
             android:name=".activity.ProfileActivity"
@@ -61,10 +60,10 @@
             android:name=".activity.ThanhToanActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.TieuThuyetActivity"
+            android:name=".activity.SachActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.SachActivity"
+            android:name=".activity.TruyenActivity"
             android:exported="false" />
         <activity
             android:name=".activity.DangNhapActivity"
