--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
-    implementation files('E:\\androiddemo\\BookStoreG3\\app\\libs\\jtds-1.3.1.jar')
+    implementation 'net.sourceforge.jtds:jtds:1.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     testImplementation 'junit:junit:4.13.2'
